unpackaged/objects/Fatture__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fatture</relationshipLabel>
        <relationshipName>Fatture_Account</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Data_Emissione__c</fullName>
        <label>Data Emissione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Scadenza__c</fullName>
        <label>Data Scadenza</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diplay_URL__c</fullName>
        <label>Diplay URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Flusso_Fatture__c</fullName>
        <label>Flusso Fatture</label>
        <referenceTo>Flusso_Fatture__c</referenceTo>
        <relationshipLabel>Fatture</relationshipLabel>
        <relationshipName>Fatture</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Importo__c</fullName>
        <label>Importo</label>
        <precision>11</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Numero_Fattura__c</fullName>
        <externalId>true</externalId>
        <label>Numero Fattura</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Fattura</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Fattura</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fatture</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>